# sol

./: CHANGELOG.md  CMakeLists.txt  README.md
include/sol/: sol.hpp
tests/: sol_test.cpp
